src/test/deca/avecObjet/valid/class_field_init_in_method copy.deca
// Description :
//    Initialisation d'un champ de classe dans une méthode.
//
// Resultats :
//    OK

class A {
    int x;

    void init() {
        x = 42;
    }
}

{
}

