src/test/deca/avecObjet/invalid/field_visibility_mismatch_in_subclass.deca
// Description :
//    Redéclaration d'un champ hérité avec une visibilité incompatible.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 13 : Le champ x est déjà défini dans cette classe ou hérité

class A {
protected int x;
}

class B extends A {
int x;
}

{
}

